--- a/index.html
+++ b/index.html
@@ -10,134 +10,145 @@
 
   <!-- Header / Hero Section -->
   <header>
-    <div>
-      <!-- Ask Copilot to teach you about `.svg`. 🙂 You'll need to resize the logo with CSS. -->
+    <!-- Centered logo container -->
+    <div class="header-logo-container">
       <img src="img/intel-header-logo.svg" alt="Intel Logo" />
-      <!-- Main Heading -->
-      <h1>
-        Sustainability Through the Ages
-      </h1>
-
-      <!-- Subheading / Description -->
-      <p>
-        Explore Intel's journey through time, discovering how our commitment
-        to innovation has shaped a more sustainable future for technology 
-        and our planet.
-      </p>
     </div>
   </header>
 
-  <!-- Timeline Cards Section -->
-  <section>
-
-    <!-- Card 1: 1968 -->
-    <div>
-      <h2>1968</h2>
-      <h3>Intel Founded</h3>
-      <!-- Add image -->
-      <p>
-        Robert Noyce and Gordon Moore rename the newly formed company 
-        NM Electronics to Intel Corporation, laying the foundation for 
-        decades of technological innovation.
+  <!-- New hero section: large heading, short description, CTA button -->
+  <section class="hero" aria-labelledby="hero-title">
+    <div class="hero-inner">
+      <h1 id="hero-title">Sustainability Through the Ages</h1>
+      <p class="hero-sub">
+        Explore Intel's journey through time, discovering how our commitment to innovation has shaped a more sustainable future.
       </p>
-    </div>
-
-    <!-- Card 2: 1971 -->
-    <div>
-      <h2>1971</h2>
-      <h3>First Microprocessor</h3>
-      <!-- Add image -->
       <p>
-        Intel debuts the 4004, the world's first commercial microprocessor, 
-        igniting the microprocessor revolution and propelling the future 
-        of computing devices.
-      </p>
-    </div>
-
-    <!-- Card 3: 1978 -->
-    <div>
-      <h2>1978</h2>
-      <h3>8086 Processor</h3>
-      <!-- Add image -->
-      <p>
-        Launch of the 8086 processor, establishing the x86 architecture 
-        that drives countless PCs and servers in the modern era.
-      </p>
-    </div>
-
-    <!-- Card 4: 1985 -->
-    <div>
-      <h2>1985</h2>
-      <h3>386 Processor</h3>
-      <!-- Add image -->
-      <p>
-        Intel introduces the 386 processor with 32-bit architecture, 
-        ushering in a new era of performance and multitasking for 
-        personal computers.
-      </p>
-    </div>
-
-    <!-- Card 5: 2006 -->
-    <div>
-      <h2>2006</h2>
-      <h3>Peak GHG Emissions</h3>
-      <!-- Add image -->
-      <p>
-        This year marks Intel's highest annual greenhouse gas emissions 
-        for operations. Over subsequent years, Intel invests heavily in 
-        chemical abatement, renewable energy, and energy-efficient 
-        manufacturing to reverse this trend.
-      </p>
-    </div>
-
-    <!-- Card 6: 2020 -->
-    <div>
-      <h2>2020</h2>
-      <h3>RISE Strategy</h3>
-      <!-- Add image -->
-      <p>
-        Intel launches its RISE (Responsible, Inclusive, Sustainable, 
-        Enabling) strategy and 2030 goals, aiming to drive industry-wide 
-        progress on climate action, water stewardship, and waste reduction.
-      </p>
-    </div>
-
-    <!-- Card 7: 2022 -->
-    <div>
-      <h2>2022</h2>
-      <h3>Net-Zero By 2040</h3>
-      <!-- Add image -->
-      <p>
-        Intel announces its commitment to achieve net-zero greenhouse 
-        gas emissions (Scope 1 and 2) across its global operations 
-        by 2040, building on years of environmental initiatives.
-      </p>
-    </div>
-
-    <!-- Card 8: 2023 -->
-    <div>
-      <h2>2023</h2>
-      <h3>Renewable Electricity</h3>
-      <!-- Add image -->
-      <p>
-        The company achieves 99% renewable electricity usage worldwide, 
-        helping to drastically lower carbon emissions and driving progress 
-        toward Intel's long-term sustainability goals.
-      </p>
-    </div>
-
-    <!-- Card 9: 2024 -->
-    <div>
-      <h2>2024</h2>
-      <h3>Sustainability Summit</h3>
-      <!-- Add image -->
-      <p>
-        Intel hosts its first Sustainability Summit, uniting suppliers, 
-        government officials, and industry leaders to collaborate on 
-        next-generation sustainable semiconductor manufacturing.
+        <a class="hero-cta" href="#timeline">View the timeline</a>
       </p>
     </div>
   </section>
-  <p>Scroll to view timeline | Hover over cards to learn more!</p>
+
+  <!-- Timeline Cards Section (horizontal, flexbox-based) -->
+  <section id="timeline">
+    <div class="timeline">
+
+      <!-- Card 1: 1968 -->
+      <article class="card">
+        <h2>1968</h2>
+        <img src="img/1.jpg" alt="1968 image" class="card-img" />
+        <h3>Intel Founded</h3>
+        <p>
+          Robert Noyce and Gordon Moore rename the newly formed company
+          NM Electronics to Intel Corporation, laying the foundation for
+          decades of technological innovation.
+        </p>
+      </article>
+
+      <!-- Card 2: 1971 -->
+      <article class="card">
+        <h2>1971</h2>
+        <img src="img/2.jpg" alt="1971 image" class="card-img" />
+        <h3>First Microprocessor</h3>
+        <p>
+          Intel debuts the 4004, the world's first commercial microprocessor,
+          igniting the microprocessor revolution and propelling the future
+          of computing devices.
+        </p>
+      </article>
+
+      <!-- Card 3: 1978 -->
+      <article class="card">
+        <h2>1978</h2>
+        <img src="img/3.jpg" alt="1978 image" class="card-img" />
+        <h3>8086 Processor</h3>
+        <p>
+          Launch of the 8086 processor, establishing the x86 architecture
+          that drives countless PCs and servers in the modern era.
+        </p>
+      </article>
+
+      <!-- Card 4: 1985 -->
+      <article class="card">
+        <h2>1985</h2>
+        <img src="img/4.jpg" alt="1985 image" class="card-img" />
+        <h3>386 Processor</h3>
+        <p>
+          Intel introduces the 386 processor with 32-bit architecture,
+          ushering in a new era of performance and multitasking for
+          personal computers.
+        </p>
+      </article>
+
+      <!-- Card 5: 2006 -->
+      <article class="card">
+        <h2>2006</h2>
+        <img src="img/2006.svg" alt="2006 image" class="card-img" />
+        <h3>Peak GHG Emissions</h3>
+        <p>
+          This year marks Intel's highest annual greenhouse gas emissions
+          for operations. Over subsequent years, Intel invests heavily in
+          chemical abatement, renewable energy, and energy-efficient
+          manufacturing to reverse this trend.
+        </p>
+      </article>
+
+      <!-- Card 6: 2020 -->
+      <article class="card">
+        <h2>2020</h2>
+        <img src="img/2020.svg" alt="2020 image" class="card-img" />
+        <h3>RISE Strategy</h3>
+        <p>
+          Intel launches its RISE (Responsible, Inclusive, Sustainable,
+          Enabling) strategy and 2030 goals, aiming to drive industry-wide
+          progress on climate action, water stewardship, and waste reduction.
+        </p>
+      </article>
+
+      <!-- Card 7: 2022 -->
+      <article class="card">
+        <h2>2022</h2>
+        <img src="img/2022.svg" alt="2022 image" class="card-img" />
+        <h3>Net-Zero By 2040</h3>
+        <p>
+          Intel announces its commitment to achieve net-zero greenhouse
+          gas emissions (Scope 1 and 2) across its global operations
+          by 2040, building on years of environmental initiatives.
+        </p>
+      </article>
+
+      <!-- Card 8: 2023 -->
+      <article class="card">
+        <h2>2023</h2>
+        <img src="img/2023.svg" alt="2023 image" class="card-img" />
+        <h3>Renewable Electricity</h3>
+        <p>
+          The company achieves 99% renewable electricity usage worldwide,
+          helping to drastically lower carbon emissions and driving progress
+          toward Intel's long-term sustainability goals.
+        </p>
+      </article>
+
+      <!-- Card 9: 2024 -->
+      <article class="card">
+        <h2>2024</h2>
+        <img src="img/2024.svg" alt="2024 image" class="card-img" />
+        <h3>Sustainability Summit</h3>
+        <p>
+          Intel hosts its first Sustainability Summit, uniting suppliers,
+          government officials, and industry leaders to collaborate on
+          next-generation sustainable semiconductor manufacturing.
+        </p>
+      </article>
+
+    </div>
+  </section>
+
+  <!-- Footer section with navigation hint and back to top link -->
+  <section class="footer-nav">
+    <p>Scroll to view timeline | Hover over cards to learn more!</p>
+    <a href="#" class="back-to-top">Back to Top</a>
+  </section>
+
 </body>
 </html>
